--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@ text-align: center
 </style>
 <body>
 <img src="banner.png" id= "banner">
+<div class="parte1">
 <H1 style="text-align: center;">Sobre a Barbearia Alura</H1>
 <p style="font-size: 20px">
 Localizada no coração da cidade a <b>Barbearia Alura</b> traz para o mercado o que há de melhor para o seu cab/elo e barba. Fundada em 2019, a Barbearia Alura já é destaque na cidade e conquista novos clientes a cada dia.</p>
@@ -22,6 +23,8 @@ Nossa missão é:
 <p style="font-size: 20px">
 Oferecemos profissionais experientes e antenados às mudanças no mundo da moda. O atendimento possui padrão de excelência e agilidade, garantindo qualidade e satisfação dos nossos clientes.</p>
 <ul>
+</div>
+<div class="parte2">
 <h2> benefícios</h2>
 <li>atendimento de qualidade </li>
 <li>localização</li>
@@ -36,5 +39,5 @@ Oferecemos profissionais experientes e antenados às mudanças no mundo da moda.
 
 <script src="https://replit.com/public/js/replit-badge-v2.js&quot; theme="dark" position="bottom-right"></script>
 </body>
-
+</div>
 </html>
